# fastCMS

./: .env.example  ACCURATE_STATUS.md  API_DOCUMENTATION.md  AUTH_COLLECTIONS_COMPLETE.md  BAAS_COMPARISON.md  CLAUDE.md  CLI_QUICK_REFERENCE.md  COLLECTION_TYPES_GUIDE.md  DOCS.md  FEATURES.md  FEATURE_COMPARISON.md  IMPLEMENTATION_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TODO.md  PHASE1_IMPLEMENTATION.md  PHASE_2_SUMMARY.md  PLATFORM_COMPARISON.md  POCKETBASE_COMPARISON.md  QUICKSTART.md  README.md  REFERENCE_PLATFORM_FEATURES.md  RELATION_GUIDE.md  ROADMAP.md  STATUS.md  TEST_STATUS.md  USER_GUIDE.md  VIEW_COLLECTIONS_COMPLETE.md  VIEW_COLLECTIONS_IMPLEMENTATION_SUMMARY.md  WORK_COMPLETED.md  alembic.ini  demo_auth_collections.py  demo_view_collections.py  fastcms  fastcms_cli.py  pyproject.toml  pytest.ini  requirements.txt  seed_data.py  setup_examples.py  test_api_rules.py  (+2 more)
DOCS/: API_REFERENCE.md  POCKETBASE_COMPARISON.md  README.md  access-control.md  advanced-relations.md  api-keys.md  api-reference.md  audit-logging.md  authentication.md  backup-restore.md  bulk-operations.md  cli.md  collections.md  csv-import-export.md  email-verification.md  field-types.md  getting-started.md  langflow-plugin-implementation-plan.md  langflow-plugin.md  langgraph-api-reference.md  langgraph-plugin-plan.md  langgraph-plugin.md  oauth.md  plugin-development.md  plugins.md  rate-limiting.md  realtime.md  records.md  security-headers.md  system-settings.md  two-factor-auth.md  webhooks.md
app/: main.py
app/admin/: routes.py
app/core/: access_control.py  ai_config.py  config.py  dependencies.py  events.py  hooks.py  middleware.py  plugin.py  plugin_manager.py  pubsub.py  rate_limit.py  readonly.py  scheduler.py  security.py  websocket_manager.py
app/db/: session.py
app/schemas/: ai.py  auth.py  collection.py  oauth.py  realtime.py  record.py  view.py  webhook.py
app/services/: ai_agent.py  ai_service.py  api_key_service.py  audit_service.py  auth_service.py  backup_service.py  batch_service.py  code_generator.py  collection_service.py  csv_service.py  email_service.py  file_service.py  image_processor.py  log_service.py  oauth_service.py  presence_service.py  record_service.py  search_service.py  settings_service.py  two_factor_service.py  vector_store_service.py  view_service.py  webhook_service.py
app/utils/: field_types.py  query_parser.py
cli/: __init__.py  main.py
cli/commands/: collections.py  dev.py  init.py  migrate.py  users.py
migrations/versions/: 001_add_role_to_user.py  002_add_verification_and_webhook_models.py  003_add_oauth_accounts.py  004_add_search_indexes.py  005_add_complete_platform_features.py  006_add_view_query_to_collections.py  007_add_oauth_providers.py  20251123_2048_fb06c7171ada_add_collection_to_oauth.py  20251202_1059_57ded8edb60e_add_langgraph_plugin_tables.py  20251203_1055_57348398da9a_add_langgraph_integration_support.py  20251204_0001_drop_langgraph_tables.py  20251222_1104_621bae4ce6a1_add_api_keys_table.py  20251222_1257_1662d73b2d81_add_audit_logs_table.py  20251222_add_2fa_fields.py
plugins/: __init__.py
plugins/langflow/: README.md  client.py  (+6 more)
test-app/: test_realtime.html  test_sdk.html
tests/: README.md  conftest.py
(+134 files in other folders)
